lang/macro/tests/ui/contract/fail/33-empty-interface-name.stderr
error: invalid interface name: ``
 --> $DIR/33-empty-interface-name.rs:3:28
  |
3 | #[liquid::interface(name = "")]
  |                            ^^
